[gd_scene load_steps=18 format=2]

[ext_resource path="res://chary___.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://World/FloorTileMap.tscn" type="PackedScene" id=2]
[ext_resource path="res://World/WallTileMap.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/Darken.tscn" type="PackedScene" id=4]
[ext_resource path="res://World/Torch.tscn" type="PackedScene" id=5]
[ext_resource path="res://MainMenuCanvasLayer.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 23
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="DynamicFont" id=11]
font_data = ExtResource( 1 )

[node name="MainMenu" type="Control"]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FloorTileMap" parent="." instance=ExtResource( 2 )]
tile_data = PoolIntArray( 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 65537, 0, 0, 65538, 0, 1, 65539, 0, 65537, 65540, 0, 2, 65541, 0, 65538, 65542, 0, 65538, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 131073, 0, 0, 131074, 0, 65536, 131075, 0, 65537, 131076, 0, 2, 131077, 0, 2, 131078, 0, 0, 131079, 0, 65538, 131080, 0, 1, 131081, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 65538, 196612, 0, 1, 196613, 0, 65537, 196614, 0, 0, 196615, 0, 65538, 196616, 0, 0, 196617, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0 )

[node name="WallTileMap" parent="." instance=ExtResource( 3 )]
tile_data = PoolIntArray( 0, 1, 8, 1, 1, 10, 2, 1, 10, 3, 1, 10, 4, 1, 10, 5, 1, 10, 6, 1, 10, 7, 1, 10, 8, 1, 10, 9, 1, 11, 65536, 1, 65544, 65537, 1, 131078, 65538, 1, 196617, 65539, 1, 196617, 65540, 1, 196617, 65541, 1, 196617, 65542, 1, 196617, 65543, 1, 196617, 65544, 1, 131077, 65545, 1, 131083, 131072, 1, 65544, 131073, 1, 131083, 131080, 1, 65544, 131081, 1, 131083, 196608, 1, 65544, 196609, 1, 131083, 196616, 1, 65544, 196617, 1, 131083, 262144, 1, 65544, 262145, 1, 65542, 262146, 1, 10, 262147, 1, 10, 262148, 1, 10, 262149, 1, 10, 262150, 1, 10, 262151, 1, 10, 262152, 1, 65541, 262153, 1, 131083, 327680, 1, 196616, 327681, 1, 196617, 327682, 1, 196617, 327683, 1, 196617, 327684, 1, 196617, 327685, 1, 196617, 327686, 1, 196617, 327687, 1, 196617, 327688, 1, 196617, 327689, 1, 196619 )
do_init = false

[node name="CanvasModulate" parent="." instance=ExtResource( 4 )]

[node name="Torch" parent="." instance=ExtResource( 5 )]
position = Vector2( 160, 104 )
frame = 2

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource( 6 )

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
margin_right = 320.0
margin_bottom = 180.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/VBoxContainer"]
margin_right = 320.0
margin_bottom = 35.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.78
alignment = 1

[node name="RichTextLabel" type="Label" parent="CanvasLayer/VBoxContainer/VBoxContainer"]
margin_top = 1.0
margin_right = 320.0
margin_bottom = 34.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 5
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.686275, 0.0941176, 0.0941176, 1 )
text = "The Blade"
align = 1

[node name="Panel" type="Panel" parent="CanvasLayer/VBoxContainer"]
margin_top = 39.0
margin_right = 320.0
margin_bottom = 109.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.54
custom_styles/panel = SubResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
margin_top = 113.0
margin_right = 320.0
margin_bottom = 180.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.44
alignment = 1

[node name="Play" type="Button" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
margin_right = 158.0
margin_bottom = 67.0
size_flags_horizontal = 7
size_flags_vertical = 3
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
text = "PLAY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="About" type="Button" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
margin_left = 162.0
margin_right = 320.0
margin_bottom = 67.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
text = "ABOUT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AboutScreen" type="Control" parent="CanvasLayer"]
visible = false
margin_right = 320.0
margin_bottom = 184.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/AboutScreen"]
margin_right = 320.0
margin_bottom = 192.0
mouse_filter = 1
color = Color( 0.145098, 0.0588235, 0.0470588, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/AboutScreen"]
margin_left = 8.0
margin_right = 312.0
margin_bottom = 180.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/AboutScreen/VBoxContainer"]
margin_right = 304.0
margin_bottom = 24.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "About:"
align = 1

[node name="AboutBody" type="Label" parent="CanvasLayer/AboutScreen/VBoxContainer"]
margin_top = 28.0
margin_right = 304.0
margin_bottom = 117.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.55
custom_fonts/font = SubResource( 8 )
text = "The Blade is a short action/adventure game made over 7 days for the Secret Santa Game Jam! WASD to move, J to Attack and Advance Dialog, K To Dodge Roll."
autowrap = true

[node name="Label2" type="Label" parent="CanvasLayer/AboutScreen/VBoxContainer"]
margin_top = 121.0
margin_right = 304.0
margin_bottom = 180.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 9 )
text = "Made by: Tyler Pelaez (@DefectiveMelon)
Giftee: copperwall"
align = 2

[node name="Back" type="Button" parent="CanvasLayer/AboutScreen"]
margin_left = 8.0
margin_top = 152.0
margin_right = 38.0
margin_bottom = 172.0
mouse_filter = 1
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 10 )
custom_styles/focus = SubResource( 10 )
custom_styles/disabled = SubResource( 10 )
custom_styles/normal = SubResource( 10 )
custom_fonts/font = SubResource( 11 )
text = "Back"
[connection signal="pressed" from="CanvasLayer/VBoxContainer/HBoxContainer/Play" to="CanvasLayer" method="_on_Play_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/HBoxContainer/About" to="CanvasLayer" method="_on_About_pressed"]
[connection signal="pressed" from="CanvasLayer/AboutScreen/Back" to="CanvasLayer" method="_on_Back_pressed"]
